# backend

./: .env  Cargo.toml
migrations/2021-03-17-160509_add_user/: up.sql
migrations/2021-03-17-162523_create_notifications/: up.sql
migrations/2021-03-17-204741_changes/: down.sql  up.sql
src/: main.rs  schema.rs
src/handlers/: notification.rs  user.rs
src/models/: mod.rs  notification.rs  user.rs
