[package]
name = "backend"
version = "0.1.0"
authors = ["xrei <romanrei.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
reqwest = "0.9.22"
chrono = { version = "0.4.10", features = ["serde"] }
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono"] }
r2d2 = "0.8.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
derive_more = "0.99.2"
dotenv = "0.15.0"
actix-rt = "1.0.0"